--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: [Impact of Specific Stastics on Win Percentage]
+description: [Study on correlation between statstics used to measure performance and team win percentage in the NBA.]
