--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [Impact of Stastics on Win Percentage]
-description: [Study on correlation between statstics used to measure performance and team win percentage in the NBA.]
+title: [Impact of Statistics on Win Percentage]
+description: [By: Jitesh Motati, Josh Knull, Richard Wu]
