--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Impact of Statistics on Win Percentage]
-description: [By Jitesh Motati Josh Knull Richard Wu]
+description: ["By: Jitesh Motati, Josh Knull, Richard Wu"]
